app/components/authorCV/authorCVForm.scss
.contentSection {
  width: 690px;
  background-color: $gray1;
  margin-bottom: 16px;
  padding: 16px 24px;

  .formControl {
    .inlineInput {
      height: 50px;
    }

    .inlineInput + .inlineInput {
      margin-top: 4px;
    }

    .dateInlineInput {
      height: 50px;
    }

    .dateInlineInput + .dateInlineInput {
      margin-left: 24px;
    }
  }

  label {
    display: inline-flex;
    margin-right: 16px;
    width: 90px;
    height: 20px;
    font-size: 13px;
    line-height: 1.54;
    color: $gray6;
  }
}

.buttonsWrapper {
  text-align: right;
  margin-top: 8px;
}

.errorMessage {
  color: $red0;
  font-size: 12px;
  margin-left: 111px;
  margin-top: 4px;
}

.textAreaWrapper {
  width: 390px !important;
  display: inline-flex !important;
  color: $black0;
  border-radius: 5px;
  border: solid 1px $gray3;
  background-color: white !important;

  &:focus {
    border-radius: 5px;
    border: solid 1px $main_blue1;
  }
}

.inputField {
  @extend .textAreaWrapper;
  height: 30px !important;
}

.dateWrapper {
  display: flex;
  margin-top: 4px;

  .dateInlineInput {
    .errorMessage:first-child {
      @extend .errorMessage;
      margin-left: 111px;
    }

    .errorMessage:nth-child(2) {
      @extend .errorMessage;
      margin-left: 4px;
    }

    .dateField {
      @extend .inputField;
      width: 150px !important;
      padding: 8px;
      font-size: 12px;

      & + & {
        margin-left: 24px;
      }
    }
  }

  .dateCheckWrapper {
    display: flex;
    height: 30px;
    margin-left: 32px;
    margin-top: 5px;
  }
}

.errorInputField {
  @extend .inputField;
  border-color: $red0 !important;
}

.optionalText {
  position: absolute;
  margin-top: 16px;
}

